--- a/Loopback.yml
+++ b/Loopback.yml
@@ -7,7 +7,7 @@
     - name: Set loopback ipv4 address
       ios_l3_interface:
         name: loopback 0
-        ipv4: 7.7.7.7
+        ipv4: 7.7.7.7/24
     - name: Show ip
       ios_command:
         commands:
